--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,12 @@
   "scripts": {
     "start": "MONGODB_URI=mongodb://127.0.0.1:27017 node ./app.js",
     "dev": "nodemon ./app.js",
-    "seeds": "echo 'Please create seeds file'",
+    "seeds": "MONGODB_URI=mongodb://127.0.0.1:27017 node scripts/mongoDbSeed/index.js",
     "test": "newman run ./tests/api-tests.postman.json -e ./tests/env-api-tests.postman.json",
     "stop": "lsof -ti :3000 | xargs kill"
   },
   "dependencies": {
+    "@faker-js/faker": "^6.0.0-beta.0",
     "axios": "^0.25.0",
     "body-parser": "1.15.0",
     "cors": "2.7.1",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "7.1.9",
     "method-override": "2.3.5",
     "methods": "1.1.2",
+    "mongodb": "^4.4.1",
     "mongoose": "5.12.5",
     "mongoose-unique-validator": "3.0.0",
     "morgan": "1.7.0",
